--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,3 +1,19 @@
-<!-- A tag router-outlet que permite o Angular ter suporte a rotas -->
-<router-outlet></router-outlet>
+<!-- routerlink possibilida declarar para onde a página será redirecionada -->
+<nav>
+  <div class="nav-wrapper">
+    <a routerLink="" class="brand-logo right">Rotas Ng2</a>
+    <ul id="nav-mobile" class="left hide-on-med-and-down">
+      <!-- Faz com que a rota que esteja ativa receba a classe active que destaca no navbar  -->
+      <li routerLinkActive="active"><a routerLink="login">Login</a></li>
+      <li routerLinkActive="active"><a routerLink="/cursos">Cursos</a></li>
+      <li routerLinkActive="active"><a [routerLink]="['curso', idCurso.value]">Curso com Id</a></li>
+    </ul>
+  </div>
+</nav>
+<div class="container">
+  <p>Entre com o id do curso procurado</p>
+  <input type="text" #idCurso>
 
+  <!-- A tag router-outlet que permite o Angular ter suporte a rotas -->
+  <router-outlet></router-outlet>
+</div>
