--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -5,7 +5,7 @@
     <ul id="nav-mobile" class="left hide-on-med-and-down">
       <!-- Faz com que a rota que esteja ativa receba a classe active que destaca no navbar  -->
       <li routerLinkActive="active"><a routerLink="login">Login</a></li>
-      <li routerLinkActive="active"><a routerLink="/cursos">Cursos</a></li>
+      <li routerLinkActive="active"><a routerLink="/cursos" [queryParams]="{pagina:1}">Cursos</a></li>
       <li routerLinkActive="active"><a [routerLink]="['curso', idCurso.value]">Curso com Id</a></li>
     </ul>
   </div>
