--- a/src/app/cursos/cursos.component.html
+++ b/src/app/cursos/cursos.component.html
@@ -1,4 +1,5 @@
 <!-- O router link que é passado recebe 2 parâmetros, a rota e a informação que ele deseja passar -->
+<p>Página: {{ pagina }}</p>
 <div class="collection">
   <a class="collection-item"
     *ngFor="let curso of cursos"
@@ -6,3 +7,4 @@
      {{ curso.nome }}
   </a>
 </div>
+<button (click)="proximaPagina()">Prox. página</button>
