--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -6,13 +6,14 @@
       <!-- Faz com que a rota que esteja ativa receba a classe active que destaca no navbar  -->
       <li routerLinkActive="active"><a routerLink="login">Login</a></li>
       <li routerLinkActive="active"><a routerLink="/cursos" [queryParams]="{pagina:1}">Cursos</a></li>
-      <li routerLinkActive="active"><a [routerLink]="['curso', idCurso.value]">Curso com Id</a></li>
+      <!-- <li routerLinkActive="active"><a [routerLink]="['curso', idCurso.value]">Curso com Id</a></li> -->
+      <li routerLinkActive="active"><a routerLink="/alunos">Alunos</a></li>
     </ul>
   </div>
 </nav>
 <div class="container">
-  <p>Entre com o id do curso procurado</p>
-  <input type="text" #idCurso>
+  <!-- <p>Entre com o id do curso procurado</p>
+  <input type="text" #idCurso> -->
 
   <!-- A tag router-outlet que permite o Angular ter suporte a rotas -->
   <router-outlet></router-outlet>
