--- a/src/app/alunos/aluno-form/aluno-form.component.html
+++ b/src/app/alunos/aluno-form/aluno-form.component.html
@@ -11,13 +11,13 @@
   </div>
   <div class="row">
     <div class="input-field col s12">
-      <input type="text" [(ngModel)]="aluno.id" id="nome" class="validate">
+      <input type="text" [(ngModel)]="aluno.nome" class="validate" (input)="onInput()">
       <label for="nome" class="active">Nome</label>
     </div>
   </div>
   <div class="row">
     <div class="input-field col s12">
-      <input type="text" id="email" [(ngModel)]="aluno.email" class="validate">
+      <input type="text" id="email" [(ngModel)]="aluno.email" class="validate" (input)="onInput()">
       <label for="email" class="active">email</label>
     </div>
   </div>
